# filum

./: Cargo.toml  INSTRUCTION.md  README.md  package.json
.github/workflows/: build-release.yml
src/: client.rs  host.rs  instance.rs  main.rs  structs.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/bridge/: instance.rs
src/client/: connect.rs  tcp.rs  udp.rs
src/host/: create.rs  tcp.rs  udp.rs
src/instance/: connect.rs  contact.rs  tcp.rs  udp.rs
src/structs/: minecraft_server_info.rs  postman_server_info.rs
src/utils/: compose.rs  constants.rs  display_info.rs  random_port.rs
