[package]
name = "filum"
version = "0.2.5"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
inquire = "0.7.5"
colored = "3.0.0"
iroh = "0.90.0"
iroh-base = "0.90.0"
anyhow = "1.0.98"
nanoid = "0.4.0"
clap = { version = "4.5.40", features = ["derive"] }
base64 = "0.22.1"
dashmap = "6.1.0"
tokio-util = "0.7.15"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
